fix header by moving overflow-x to stylesheet of overview component

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,7 +16,6 @@ html,
 body {
   font-size: 100%;
   height: 100%;
-  overflow-x: hidden;
   background-color: lightgray;
 }
 
